<resources>
    <string name="app_name">ParQ</string>
    <!-- activity_login -->
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <!-- activity_register -->

    <!-- activity_menu -->
    <string-array name="options">
        <item>Your profile</item>
        <item>Tickets</item>
        <item>Vehicles</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <!-- activity_profile -->
    <string name="email">email</string>
    <string name="wallet">wallet</string>
    <string name="enter_amount">Podaj kwotę</string>
    <string name="pay_now">Zapłać</string>
    <!-- fragment_type_url -->
    <string name="type_url">Podaj adres serwera</string>
    <string name="ok">OK</string>
    <!-- activity_vehicle_list -->
    <string name="add_vehicle">Dodaj pojazd</string>
    <!-- activity_add_vehicle -->
    <string name="name">Nazwa</string>
    <string name="plate_country">Kraj</string>
    <string name="plate_number">Numer rejestracji</string>
    <string-array name="countries">
        <item>PL</item>
        <item>DE</item>
    </string-array>
    <!-- activity_tickets -->
    <string name="parking">Parking</string>
    <string name="date">Date</string>
    <string name="schedule">Schedule</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="buy_ticket">Buy ticket</string>
    <string name="select_date">Select date</string>
    <!-- activity_buy_tickets -->
    <string name="vehicles">Vehicles</string>
    <!-- ParQ API URL -->
    <string name="url_login">login/</string>
    <string name="url_current">current/</string>
    <string name="url_tickets">tickets/</string>
    <string name="url_vehicles">vehicles/</string>
    <string name="url_schedules">schedules/</string>
    <string name="url_parkings">parkings/</string>
    <string name="url_payments">payments/</string>
    <string name="url_register">register/</string>
    <!-- SharedPreferences -->
    <string name="sharedpref_file_key">org.parq.parqofficer.sharedpref</string>
    <string name="sharedpref_url_slug">url</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
