<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_buy_ticket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.parq.parq.BuyTicketActivity">

    <TableLayout
        android:id="@+id/ticket_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles"/>
            <Spinner
                android:id="@+id/vehicles_spinner"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"/>
            <Button
                android:id="@+id/from_label"
                style="@style/Widget.AppCompat.EditText"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"/>
            <Button
                android:id="@+id/to_label"
                style="@style/Widget.AppCompat.EditText"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/accept_ticket_button"
        android:layout_below="@id/ticket_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_ticket"/>

</RelativeLayout>
