<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.parq.parq.AddVehicleActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <EditText
                    android:id="@+id/name_label"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plate_country"/>
                <Spinner
                    android:id="@+id/plate_country_spinner"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:entries="@array/countries"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plate_number"/>
                <EditText
                    android:id="@+id/plate_number_label"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/add_vehicle"/>
    </LinearLayout>
</ScrollView>
